--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "alexusmai/laravel-file-manager": "^2.4",
         "barryvdh/laravel-dompdf": "^0.8.4",
         "barryvdh/laravel-snappy": "^0.4.4",
         "fideloper/proxy": "^4.0",
