--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "chartkick": "^3.1.0",
         "element-ui": "^2.8.2",
         "jspdf": "^1.5.3",
+        "laravel-file-manager": "^2.4.0",
         "moment": "^2.24.0",
         "pug": "^2.0.4",
         "read-excel-file": "^4.0.1",
